# SEYFERT

./: Dockerfile  README.md  docker-compose.yaml  install_classy.sh  installer.sh  pyproject.toml  requirements.txt  setup.py  shortcuts.jupyterlab-settings
app-seyfert/: pyproject.toml
app-seyfert/app_seyfert/: main.py
app-seyfert/tests/: test_app_seyfert.py
aux/: config_files
demo/: .gitignore  CreateDensityAndBiasFiles.ipynb  InteractiveForecast.ipynb  SeyfertDemo.ipynb  SeyfertNotebook.ipynb  plt_params.mplstyle
docs/source/: conf.py  index.rst
integration_tests/: Dockerfile  do_integration_run.sh  docker-compose.yaml  set_env.sh
integration_tests/config/: cl_cfg.json  config.ini  der_cfg.json  fcfg.xml  fish_cfg.json  res_cfg.json
mytest_debug/: MakeContourPlots.py  Untitled.ipynb  debug.py  delta_cl_debug.py  table_debug.py
mytest_debug/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
mytest_debug/testseyfert/: input_files_dict.json  norm_densities.hdf5
scripts/: build_tables.py  gendoc.sh  generate_fcfgs.py  opendoc.sh
seyfert/: __init__.py  seyfert.py
seyfert.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
seyfert/base_structs/: cl_dict.py  generic_dict.py
seyfert/config/: cmd_line.py  forecast_config.py  main_config.py  probe_config.py
seyfert/cosmology/: __init__.py  bias.py  boltzmann_solver.py  c_ells.py  cosmology.py  kernel_functions.py  parameter.py  power_spectrum.py  redshift_density.py  weight_functions.py
seyfert/derivatives/: __init__.py  cl_derivative.py  differentiator.py
seyfert/file_io/: __init__.py  ext_input.py  hdf5_io.py  json_io.py  retro_comp.py
seyfert/fisher/: __init__.py  datavector.py  delta_cl.py  final_results_core.py  fisher_analysis.py  fisher_evaluator.py  fisher_matrix.py  fisher_plot.py  fisher_results.py  fisher_utils.py  linalg_tools.py  results_collector.py
seyfert/gui/: SeyfertConfigGUI.ui  generate_gui_core.sh  gui_core.py  interface_window.py
seyfert/main/: bsub_utils.py  cl_core.py  cl_derivative_core.py  fisher_core.py  orchestration.py  report_maker.py  seyfert_core.py  task_runners.py
seyfert/notebook_helpers/: __init__.py  barplots.py  contours.py  fom_gain_plots.py  load_helpers.py  misc.py  table_helpers.py
seyfert/numeric/: __init__.py  general.py  integration.py
seyfert/plot_utils/: __init__.py  cl_plot.py  colors.py  misc.py
seyfert/utils/: __init__.py  array_utils.py  comparison_utils.py  (+13 more)
tests/: .coverage  conftest.py
(+94 files in other folders)
