[tool.poetry]
name = "seyfert"
version = "3.8.0"
description = "SurvEY FishEr foRecast Tool"
authors = ["Luca Paganin <luca.paganin@ge.infn.it>"]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
numpy = "1.22"
numba = "0.56.0"
scipy = "1.9.0"
h5py = "^3.7.0"
astropy = "^5.1"
seaborn = "^0.11.2"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
XlsxWriter = "^3.0.3"
openpyxl = "^3.0.10"
pytest = "^7.1.2"
coverage = "^6.4.4"
pytest-mock = "^3.8.2"
setuptools = "^65.0.2"
wheel = "^0.37.1"
packaging = "^21.3"
PyQt5 = "^5.15.7"
classy = "^2.9.4"
ipython = "^8.4.0"
jupyterlab = "^3.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
